Small update to the README file in tests (updated paths).

--- a/tests/README
+++ b/tests/README
@@ -11,8 +11,8 @@ It recompiles the application in example-compile-run/compile/app0 for the couple
 
 POSSIBLE PROBLEMS IN CNLS ANALYSIS:
 1233c1233 < 194 --- > 192 1245c1245 < 1 --- > 2 1253c1253 < 0.9651 --- > 0.9552 1257c1257 < 0.9701 --- > 0.9601 1261c1261 < 0.9751 --- > 0.9651 1265c1265 < 0.98 --- > 0.9751
-PLEASE DOUBLE CHECK /home/mariani/workspace/compilers/llvm-3.5/example-compile-profile/profile/app0/differences.cnls
-Or use a GUI to compare: /home/mariani/workspace/compilers/llvm-3.5/example-compile-profile/profile/app0/output.cnls /home/mariani/workspace/compilers/llvm-3.5/example-compile-profile/references/app0.cnls 
+DOUBLE CHECK example-compile-profile/profile/app0/differences.cnls.
+Or use a GUI to compare: example-compile-profile/profile/app0/output.cnls with example-compile-profile/references/app0.cnls.
 
 NOTE: 
 The script regressionTestApp0.sh does not recompile the libraries (or the pass) of our software. Before running the test you need to have installed the version of our software (coupled or decoupled) you want to test.
